Solve the background and the footer gap bug

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,17 @@
+* {
+    border: 20px solid red !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    /* Ensure full viewport height */
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    
 }
 
 /* If you're using Bootstrap or have wrapper divs, add this */
@@ -26,13 +35,11 @@ main {
 }
 
 .main-container {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    height: fit-content;
     overflow-y: none;
 }
 
@@ -51,7 +58,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: fit-content;
+    height: 100%;
 }
 
 .container h1,
@@ -130,7 +137,7 @@ footer {
     background-color: #1f723c;
     /* Dark Green */
     color: white;
-    padding: 50px 20px;
+    padding: 20px;
     /* Increased top and bottom padding */
     margin-top: auto;
     min-height: 150px;
@@ -256,10 +263,6 @@ footer {
 @media (min-width: 1200px) {
     body {
         font-size: 17px;
-    }
-
-    .logo {
-        width: 175px;
     }
 
     .main-container {
